--- a/ASTRA17/astra2017.tex
+++ b/ASTRA17/astra2017.tex
@@ -151,7 +151,7 @@ ADE components have four types of interface links,
 Activation links are used to exchange data between components,
 observation links pass state information to other components while process control links can change state,
 and component links allow components to create new components.
-Because of these dynamic properties, e.g. the creation and interconnection of compoents during run-time, the semantics of a component follow the CPN model in which non-determinism is possible.
+Because of these dynamic properties, e.g. the creation and interconnection of components during run-time, the semantics of a component follow the CPN model in which non-determinism is possible.
 Communication relies on registries, servers and clients and is implemented in JAVA language as well as the components itself.
 Therefore, an ADE component needs a JAVA virtual machine on top of conventional processing device (and possibly an OS).
 This virtualisation and the component link mechanism provide replication transparency.
